# activity_tracker

client_macos/: .editorconfig  .gitignore  CMakeLists.txt
client_macos/spyware/: main.cpp
client_macos/spyware.xcodeproj/: project.pbxproj
client_macos/spyware.xcodeproj/project.xcworkspace/xcuserdata/resolv.xcuserdatad/: UserInterfaceState.xcuserstate
client_macos/spyware.xcodeproj/xcuserdata/resolv.xcuserdatad/xcschemes/: xcschememanagement.plist
client_macos/src/: main.cpp
server/: bootstrap_db.sh  config.json.example  index.js  package-lock.json  package.json  schema.sql
